Thu Oct 23 15:39:07 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tao/Bounded_Sequence_CDR_T.h:
        * tao/Unbounded_Sequence_CDR_T.h:

          Hopefully fix a Borland compilation error.

Thu Oct 23 14:15:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:

        Match the rename of ace/Process.h/cpp:
        Wed Oct 22 13:30:54 UTC 2008  Douglas C. Schmidt

Thu Oct 23 11:50:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/LocalObjects/Messenger/Messenger_i.h
        * DevGuideExamples/PortableInterceptors/Auth/ClientInitializer.h
        * DevGuideExamples/PortableInterceptors/Auth/ClientInterceptor.h
        * DevGuideExamples/PortableInterceptors/IOR/ClientInitializer.h
        * DevGuideExamples/PortableInterceptors/IOR/ClientInterceptor.h
        * DevGuideExamples/PortableInterceptors/IOR/ServerIORInterceptor.h
        * DevGuideExamples/PortableInterceptors/PICurrent/ClientInitializer.h
        * DevGuideExamples/PortableInterceptors/PICurrent/ClientInterceptor.h
        * DevGuideExamples/PortableInterceptors/PICurrent_NameService/ClientInitializer.h
        * DevGuideExamples/PortableInterceptors/PICurrent_NameService/ClientInterceptor.h
        * DevGuideExamples/PortableInterceptors/SimpleCodec/ClientInitializer.h
        * DevGuideExamples/PortableInterceptors/SimpleCodec/ClientInterceptor.h
          Don't use deprecated TAO_Local_RefCounted_Object

Thu Oct 23 10:28:43 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tests/Bug_3471_Regression/client.cpp:
        * tests/Bug_3471_Regression/server.cpp:
          Wchar nonesense.

Thu Oct 23 09:14:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/EchoEventSupplierMain.cpp:
          Fixed compile error

Thu Oct 23 07:54:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/EventServices